--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,10 +31,24 @@ body.sticky-bottom-footer {
   max-width: $max-content-width;
 }
 
+.btn {
+  background-color: white;
+  border: 2px solid #{$red-color-dark};
+  border-radius: 8px;
+  color: black;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  box-shadow: none;
+  margin-left: 0px;
+}
+
 // Profile
 .profile {
   img {
-    width: 100%;
+    width: 150%;
   }
 }
 
