--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -2,43 +2,48 @@
 ---
 <div class="row">
   {% if site.enable_publication_thumbnails %}
-    <div class="col col-sm-2 abbr">
-      {%- if entry.abbr -%}
-        {%- if site.data.venues[entry.abbr] -%}
-          {% assign venue_style = null %}
-          {% if site.data.venues[entry.abbr].color != blank %}
-            {% assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' %}
-          {%- endif -%}
-          <abbr
-            class="badge rounded w-100"
-            {% if venue_style %}
-              {{ venue_style }}
-            {% endif -%}
-          >
-            {% if site.data.venues[entry.abbr].url %}
-              <a href="{{ site.data.venues[entry.abbr].url }}">{{ entry.abbr }}</a>
-            {% else %}
-              <div>{{- entry.abbr -}}</div>
-            {% endif %}
-          </abbr>
-        {% else %}
-          <abbr class="badge rounded w-100">{{ entry.abbr }}</abbr>
-        {% endif %}
-      {% endif %}
+    <div class="col-sm-4 {% if entry.preview %}col-sm-4{%elsif entry.video_preview%}col-sm-4{% else %}abbr{% endif %}">
       {% if entry.preview %}
         {% if entry.preview contains '://' %}
-          <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
+          <img class="preview" src="{{ entry.preview }}">
         {% else %}
           {% assign entry_path = entry.preview | prepend: '/assets/img/publication_preview/' %}
           {%
             include figure.liquid
             loading="eager"
             path=entry_path
-            sizes = "200px"
-            class="preview z-depth-1 rounded"
-            zoomable=true
+            width="150"
+            height="130"
+            class="preview"
+            zoomable=false
             alt=entry.preview
           %}
+        {% endif %}
+      {% elsif entry.video_preview %}
+        <iframe
+          class="preview"
+          width="150"
+          height="130"
+          src="{{ entry.video_preview }}"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        />
+      {% elsif entry.abbr %}
+        {% if site.data.venues[entry.abbr] %}
+          {% assign venue_style = null %}
+          {% if site.data.venues[entry.abbr].color != blank %}
+            {% assign venue_style = site.data.venues[entry.abbr].color | prepend: 'style="background-color:' | append: '"' %}
+          {% endif %}
+          <abbr
+            class="badge"
+            {% if venue_style %}
+              {{ venue_style }}
+            {% endif %}
+            ><a href="{{site.data.venues[entry.abbr].url}}">{{ entry.abbr }}</a></abbr
+          >
+        {% else %}
+          <abbr class="badge">{{ entry.abbr }}</abbr>
         {% endif %}
       {% endif %}
     </div>
@@ -47,7 +52,24 @@
   <!-- Entry bib key -->
   <div id="{{ entry.key }}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
     <!-- Title -->
+    {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
+    {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
+    {% if entry.type == 'article' %}
+      {% assign pub = entry.book_abbr %}
+    {% elsif proceedings contains entry.type %}
+      {% assign pub = entry.book_abbr %}
+    {% elsif thesis contains entry.type %}
+      {% assign pub = entry.book_abbr %}
+    {% else %}
+      {% capture entrytype %}{% endcapture %}
+    {% endif %}
     <div class="title">{{ entry.title }}</div>
+    <div class="title">
+      <em>{{ pub }}</em> &nbsp;
+      {% if entry.award -%}
+        <i class="fas fa-award" style="color: #b71c1c;"></i> <em>{{ entry.award }}</em>
+      {%- endif %}
+    </div>
     <!-- Author -->
     <div class="author">
       {% assign author_array_size = entry.author_array | size %}
@@ -146,41 +168,34 @@
     </div>
 
     <!-- Journal/Book title and date -->
-    {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
-    {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
-    {% if entry.type == 'article' %}
-      {% capture entrytype %}<em>{{ entry.journal }}</em>{% endcapture %}
-    {% elsif proceedings contains entry.type %}
-      {% capture entrytype %}<em>In {{ entry.booktitle }}</em>{% endcapture %}
-    {% elsif thesis contains entry.type %}
-      {% capture entrytype %}<em>{{ entry.school }}</em>{% endcapture %}
-    {% else %}
-      {% capture entrytype %}{% endcapture %}
+    {% assign journalenabled = false %}
+    {% if journalenabled %}
+      {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
+      {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
+      {% if entry.type == 'article' %}
+        {% capture entrytype %}<em>{{entry.journal}}</em>{% endcapture %}
+      {% elsif proceedings contains entry.type %}
+        {% capture entrytype %}<em>In {{entry.booktitle}}</em> {% endcapture %}
+      {% elsif thesis contains entry.type %}
+        {% capture entrytype %}<em>{{entry.school}}</em> {% endcapture %}
+      {% else %}
+        {% capture entrytype %}{% endcapture %}
+      {% endif %}
+      {% if entry.month %}
+        {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
+      {% endif %}
+      {% if entry.year %}
+        {% capture entryyear %}{{ " " }}{{entry.year}}{% endcapture %}
+      {% endif %}
+      {% assign entrytype_text = entrytype | strip_html | strip %}
+      {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %}, {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
+      <div class="periodical">
+        {{ periodical | strip }}
+      </div>
+      <div class="periodical">
+        {{ entry.note | strip }}
+      </div>
     {% endif %}
-    {% if entry.month %}
-      {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
-    {% endif %}
-    {% if entry.year %}
-      {% capture entryyear %}{{ " " }}{{ entry.year }}{% endcapture %}
-    {% endif %}
-    {% if entry.location %}
-      {% capture entrytype %}{{ entrytype }}{{ ", " }}{{ entry.location }}{% endcapture %}
-    {% endif -%}
-    {% if entry.additional_info %}
-      {% capture entrytype %}{{ entrytype }}{{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}{% endcapture %}
-    {% endif %}
-    {% capture hook_exists %}{% file_exists _includes/hook/bib.liquid %}{% endcapture %}
-    {% if hook_exists == 'true' %}
-      {% include hook/bib.liquid %}
-    {% endif %}
-    {% assign entrytype_text = entrytype | strip_html | strip %}
-    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %}, {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
-    <div class="periodical">
-      {{ periodical | strip }}
-    </div>
-    <div class="periodical">
-      {{ entry.note | strip }}
-    </div>
 
     <!-- Links/Buttons -->
     <div class="links">
@@ -222,7 +237,7 @@
           <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
         {% endif %}
       {% endif %}
-      {% if entry.video and site.enable_video_embedding %}
+      {% if entry.video | false %}
         <a class="abstract btn btn-sm z-depth-0" role="button">Video</a>
       {% elsif entry.video %}
         <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
@@ -359,7 +374,7 @@
       </div>
     {% endif %}
 
-    {% if entry.video and site.enable_video_embedding %}
+    {% if entry.video | false %}
       <!-- Hidden video block -->
       <div class="abstract hidden">
         <div style="text-align: center;">{% include video.liquid path=entry.video class="img-fluid rounded z-depth-1" controls=true %}</div>
